ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-pings
          persistentVolumeClaim:
            claimName: common-claim
      containers:
        - name: ping-pong
          image: 2kai/k8s-school-ping-pong:latest
          volumeMounts:
            - name: shared-pings
              mountPath: /opt/pings
