ping-pong/manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-postgres-svc
  namespace: applications
spec:
  clusterIP: None
  selector:
    app: ping-pong-postgres-ss
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ping-pong-postgres-ss
  namespace: applications
spec:
  serviceName: ping-pong-postgres-svc
  selector:
    matchLabels:
      app: ping-pong-postgres-ss
  template:
    metadata:
      labels:
        app: ping-pong-postgres-ss
    spec:
      containers:
        - name: postgres
          image: postgres:14.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-path
        resources:
          requests:
            storage: 500Mi
